
syntax = "proto3";
package Message;

enum Code {
  Ok = 0;
  Error = 1;                    //内部未知错误
  GateSignFailed = 2;           // gate校验失败
  AccountIllegal = 3;           //账号id非法
  ItemNodEnough = 4;            //道具数量不足
  ItemIdNotExist = 5;           //道具不存在
  ItemTypeNotDeal = 6;          //道具类型未处理
  AddCountMustBiggerThan0 = 7;  //道具增加的数必须大于0
  ConfigNotFound = 8;           //配置不存在
}